...
"All" = "All";
"Text" = "Text";
"Images" = "Images";
"Links" = "Links";
"Pinned Only" = "Pinned Only";
"Filter results" = "Filter results";
"Show Details" = "Show Details";
"Remove" = "Remove";
"Copies this item to the clipboard." = "Copies this item to the clipboard.";
"Item thumbnail" = "Item thumbnail";
"Copy to Clipboard" = "Copy to Clipboard";
"Move to Top" = "Move to Top";
"Move to Bottom" = "Move to Bottom";
...
